hydran-67: Add PUT resource implemented.
