# src/main/java/se/sundsvall/installedbase/api/model/facilitydelegation/CreateFacilityDelegation.java
@@ -1,0 +1,4 @@
+package se.sundsvall.installedbase.api.model.facilitydelegation;
+
+public class CreateFacilityDelegation {
+}
