# src/main/java/se/sundsvall/installedbase/api/model/facilitydelegation/UpdateFacilityDelegation.java
@@ -1,0 +1,4 @@
+package se.sundsvall.installedbase.api.model.facilitydelegation;
+
+public class UpdateFacilityDelegation {
+}
