# src/main/java/se/sundsvall/installedbase/service/mapper/EntityMapper.java
@@ -10,7 +10,7 @@ public final class EntityMapper {
 
 	/**
 	 * Converts a FacilityDelegation to a FacilityDelegationEntity.
-	 * 
+	 *
 	 * @param  municipalityId     the municipality ID
 	 * @param  facilityDelegation the facilityDelegation to convert
 	 * @param  status             the delegation status
@@ -28,7 +28,7 @@ public final class EntityMapper {
 
 	/**
 	 * Converts a FacilityDelegationEntity to a FacilityDelegation.
-	 * 
+	 *
 	 * @param  entity the FacilityDelegationEntity to convert
 	 * @return        a FacilityDelegation representing the entity
 	 */
@@ -42,6 +42,22 @@ public final class EntityMapper {
 			.withOwner(entity.getOwner())
 			.withStatus(entity.getStatus().name())
 			.withCreated(entity.getCreated())
+			.withUpdated(entity.getUpdated())
 			.withDeleted(entity.getDeleted());
+	}
+
+	/**
+	 * Updates a FacilityDelegationEntity for a PUT operation.
+	 * Should only updates the facilities, delegatedTo, and businessEngagementOrgId fields.
+	 *
+	 * @param facilityDelegationEntity the FacilityDelegationEntity to update
+	 * @param facilityDelegation       the FacilityDelegation containing the new values
+	 */
+	public static void updateEntityForPutOperation(FacilityDelegationEntity facilityDelegationEntity, FacilityDelegation facilityDelegation) {
+		// Update the entity with the new values, and only update specific fields
+		facilityDelegationEntity
+			.withFacilities(facilityDelegation.getFacilities())
+			.withDelegatedTo(facilityDelegation.getDelegatedTo())
+			.withBusinessEngagementOrgId(facilityDelegation.getBusinessEngagementOrgId());
 	}
 }
